# bas-air-unit-network-dataset

./: .gitignore  .gitlab-ci.yml  .safety-policy.yml  CHANGELOG.md  DEVELOPING.md  IMPLEMENTATION.md  README.md  add_seamask_medium_res_v7_4.gpkg  bas-air-unit-network-dataset.gpkg  input.gpx  main.py  pyproject.toml  test-data-raw.geojson  test-data-raw.json  test-data.qgz  test-dataset.gpkg
.gitlab/issue_templates/: release.md
output/: 01_bravo_to_alpha.csv  02_bravo_to_bravo.csv  02_bravo_to_bravo.fpl  03_bravo_to_lima.csv  03_bravo_to_lima.gpx  flattery.csv  flattery.fpl  flattery.gpx  flattery.kml  midnight.csv  midnight.fpl  midnight.gpx  midnight.kml  network.gpx  oak.csv  oak.fpl  oak.gpx  oak.kml  routes.csv  routes.gpx  routes.kml  waypoints.csv  waypoints.fpl  waypoints.gpx  waypoints.kml
output/FPL/: 00_WAYPOINTS_2022_07_08_waypoints.fpl  01_bravo_to_alpha.fpl  03_bravo_to_lima.fpl
output/GPX/: 00_ROUTES_2022_07_08_waypoints.gpx  01_bravo_to_alpha.gpx  02_bravo_to_bravo.gpx
src/bas_air_unit_network_dataset/: __init__.py  __main__.py  cli.py  utils.py
src/bas_air_unit_network_dataset/collections/: routes.py  waypoints.py
src/bas_air_unit_network_dataset/exporters/: fpl.py
src/bas_air_unit_network_dataset/exporters/fpl/: __init__.py  fpl.py  route.py  route_waypoint.py  utils.py  waypoint.py
src/bas_air_unit_network_dataset/features/: route.py  route_waypoint.py  waypoint.py
src/bas_air_unit_network_dataset/models/: categories.py  category.py  route.py  routes.py  waypoint.py  waypoints.py
src/bas_air_unit_network_dataset/networks/: bas_air_unit.py
src/bas_air_unit_waypoints/: __init__.py
src/bas_air_unit_waypoints/exporters/: fpl.py
tests/: compare_outputs.py  create_derived_test_outputs.py  create_outputs.py
tests/resources/test-network/: bas-air-unit-network-dataset.gpkg  create_derived_test_outputs.py  test-network.geojson  test-network.gpx  test-network.json  test-network.qgz
tests/resources/test-network/reference-outputs/CSV/: 00_WAYPOINTS_2023_05_12.csv  00_WAYPOINTS_2023_05_12_DD.csv  00_WAYPOINTS_2023_11_27_DD.csv  00_WAYPOINTS_DDM_2023_11_27.csv  00_WAYPOINTS_DDM_2024_11_22.csv  00_WAYPOINTS_DD_2024_11_22.csv
tests/resources/test-network/reference-outputs/FPL/: 00_WAYPOINTS_2023_05_12.fpl  01_BRAVO_TO_ALPHA.fpl  02_BRAVO_TO_BRAVO.fpl  03_BRAVO_TO_LIMA.fpl
tests/resources/test-network/reference-outputs/GPX/: 00_NETWORK_2023_05_12.gpx  00_NETWORK_2023_11_27.gpx
